[package]
name = "leafwing-abilities"
description = "An ability and resource management library for Bevy games"
version = "0.0.0"
authors = ["Leafwing Studios"]
homepage = "https://leafwing-studios.com/"
repository = "https://github.com/leafwing-studios/leafwing-abilities"
license = "MIT + APACHE"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", "github/**/*"]

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["dynamic"]}

[dev-dependencies]
criterion = "0.3"

[lib]
name = "leafwing_abilities"
path = "src/lib.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false